# sima2_mini

./: .gitignore  CONVERSATIONAL_AGENT.md  ENHANCEMENTS.md  FOCUS_SOLUTION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SETUP.md  SIMA_ARCHITECTURE.md  debug_vision.py  demo.py  demo_autofocus.py  fix_minecraft_focus.py  focus_minecraft.py  minecraft_chat.py  minecraft_demo.py  pyproject.toml  requirements.txt  setup_check.py  test_actions.py  test_agent_screenshots.py  test_agent_vision.py  test_enhanced_vision.py  test_gpt4o_mini.py  test_minecraft_integration.py  test_runner.py  test_screenshots.py  test_sima.py
examples/: README.md  advanced_config.json  mlp_demo.json
experiments/final_test/: config.json
experiments/final_training_test/: agent_checkpoint.json  config.json  metrics.json
experiments/minecraft_demo/: config.json
experiments/minecraft_test/: config.json
experiments/minecraft_training_test/: agent_checkpoint.json  config.json  metrics.json
experiments/sima_experiment/: agent_checkpoint.json  config.json  metrics.json
sima_like_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: __init__.py  main.py
src/agent/: agent.py  conversational_agent.py  policy.py
src/config/: config.py
src/env/: base_env.py  dummy_env.py  io_controller.py  minecraft_env.py  vision.py
src/experience/: __init__.py  buffer.py  storage.py  types.py
src/reward/: __init__.py  reward_model.py
src/tasks/: task_schema.py  task_setter.py
src/training/: self_improvement_loop.py
src/utils/: __init__.py  logging_utils.py  metrics.py  seed.py
src/vision/: minecraft_vision.py
tests/: test_agent_interfaces.py  test_experience.py
